log/.build-edax.log
Building Edax adapter...
rm -rf coach-engine
mkdir -p coach-engine/players.d coach-engine/data
# Copy adapter to edax src dir, then compile edax-style
cp /home/oliv/dev/agent/othello-refs/coach-adapters/edax/adapter.c /home/oliv/dev/agent/othello-refs/coach-adapters/edax/../../edax/src/src/adapter_main.c
rm -f /home/oliv/dev/agent/othello-refs/coach-adapters/edax/../../edax/src/bin/lEdax-native-adapter  # force clean rebuild
cd /home/oliv/dev/agent/othello-refs/coach-adapters/edax/../../edax/src/src && CC=gcc BUILD=optimize ARCH=native make adapter-build
make[1]: Entering directory '/home/oliv/dev/agent/othello-refs/edax/src/src'
gcc -std=c17 -pedantic -W -Wall -Wextra -pipe -D_GNU_SOURCE=1 -Ofast -fwhole-program -flto=auto -fomit-frame-pointer -DNDEBUG -march=native  all_adapter.c -o ../bin/lEdax-native-adapter -lm -lrt
In file included from stats.h:15,
                 from options.c:13,
                 from all_adapter.c:12:
options.c: In function ‘options_read’:
util.h:278:20: warning: unused variable ‘ggs_log’ [-Wunused-variable]
  278 |         extern Log ggs_log; \
      |                    ^~~~~~~
options.c:231:17: note: in expansion of macro ‘info’
  231 |                 info("<set option %s %s>\n", option, value);
      |                 ^~~~
In file included from all_adapter.c:39:
game.c: In function ‘game_export_pgn’:
game.c:1226:29: warning: comparison is always true due to limited range of data type [-Wtype-limits]
 1226 |         if (game->date.hour >= 0) fprintf(f, "[Time \"%d.%d.%d\"]\n", game->date.hour, game->date.minute, game->date.second);
      |                             ^~
In file included from all_adapter.c:47:
adapter_main.c: At top level:
adapter_main.c:36:19: error: initializer element is not constant
   36 |     int empties = 64 - __builtin_popcountll(edax_play->board.player | edax_play->board.opponent);
      |                   ^~
adapter_main.c:37:5: error: expected identifier or ‘(’ before ‘if’
   37 |     if (empties == 0) return true;
      |     ^~
adapter_main.c:39:1: error: expected identifier or ‘(’ before ‘}’ token
   39 | }
      | ^
make[1]: *** [Makefile:191: adapter-build] Error 1
make[1]: Leaving directory '/home/oliv/dev/agent/othello-refs/edax/src/src'
make: *** [Makefile:31: coach-build] Error 2
